--- a/estilos/style.css
+++ b/estilos/style.css
@@ -46,10 +46,57 @@ section#login > div#formulario{
     padding: 10px;
 
 }
+
 div#formulario > h1{
     text-align: center;
     margin-bottom: 10px;
 }
 div#formulario > p{
+    font-size: 0.8em;
+}
+form > div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+div.campo > label{
+    display: none;
+}
+div form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+form > input[type=submit]:hover{
+    background-color: #2e6563;
+
+}
+form a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    background-color: white;
+    border: 1px solid #66e2de;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #2e6563 ;
+}
+form > a.botao:hover{
+    background-color: #66e2de;
+}
+form > a.botao > span{
     font-size: 0.8em;
 }
