--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,7 +26,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
     background-color: white;
     width: 250px;
     height: 500px;
@@ -34,6 +33,8 @@ section#login{
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
     transition: width 0.3s, height 0.3s;
+    transform: translate(-50%,-50%);
+    transition-timing-function: ease;
 }
 section#login > div#imagem{
     display: block;
@@ -56,14 +57,34 @@ div#formulario > p{
 }
 form > div.campo{
     background-color: #5f2c82;
+    border: 2px solid #5f2c82; ;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 div.campo > label{
     display: none;
+}
+div.campo > span{
+   color: white; 
+   width: 40px;
+   padding: 5px;
+   font-size: 2em;
+}
+div.campo > input{
+    background-color: #49a09d;
+    font-size: 1em;
+  
+    width:calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+ transform: translateY(-11.6px);
+}
+div.campo > input:focus-within{
+    background-color: white;
 }
 div form > input[type=submit]{
     display: block;
